2007-11-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/usbs_at91.cdl: Fixed typos in
	CYGNUM_DEVS_USB_AT91_GPIO_PULLUP_INVERTED and
	CYGNUM_DEVS_USB_AT91_GPIO_READ_POWER_INVERTED. Fixing the typo.

	* src/usbs_at91.c (usbs_at91_set_pullup): Change the logic so that
	CYGNUM_DEVS_USB_AT91_GPIO_PULLUP_INVERTED does actually cause an
	invert when set true.
	
2006-09-07  John Eigelaar  <jeigelaar@mweb.co.za>

	* cdl/usbs_at91.c: Read actual EP addresses from the EP configuartion
	rather than relying on the order in the configuration list.

2006-06-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/usbs_at91.cdl: Allow EP0 to be enabled when there are no
	slave clients.

2006-05-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91_data.cxx: Change the initialization priority.  The
	USB tty driver is initialized at priority CYG_INIT_IO, so the USB
	device has to be initialized before that.

2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c: Rework pullup and power dectect to use the AT91
	GPIO macros.

2006-05-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Included into eCos anonymous CVS.

	Note: There appears to be a hardware bug with OUT transfers.  It
	appears that after resetting the endpoint, the first OUT transfer
	does not trigger a receive interrupt. The BK0 bit is not set,
	however the number of bytes in the receiver FIFO is correct.  The
	second OUT transfer causes both BK0 and BK1 bits to be set and an
	interrupt generated. Currently no workaround is used to correct
	this behavoiour. 
 	
2006-04-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c: Endpoint 3 can send upto 64 bytes at a time,
	not 8.

2006-04-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c (usbs_at91_control_data_sent): Send a zero byte
	packet when the transfer is an exact multiple of the endpoint
	buffer size.
	
2006-04-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c (usbs_testing_endpoints): Added support for the